--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.2.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.541.0",
     "next-themes": "^0.4.6",
